--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar">
         <div class="logo">
-            <img src="./pic/logo.png" alt="">
+            <img src="./img/logo.png" alt="">
         </div>
 
         <ul class="nav-links">
